--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.0.0",
     "tailwindcss": "^4.0.0"
+  },
+  "dependencies": {
+    "tailwind-scrollbar": "^4.0.0"
   }
 }
