modified package.json for deployment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "npx @tailwindcss/cli -i ./src/styles.css -o ./src/output.css --watch",
-    "build": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --minify"
+    "build": "npx @tailwindcss/cli -i ./src/styles.css -o ./src/output.css --minify"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.0.0",
